--- a/views/home/index.html
+++ b/views/home/index.html
@@ -123,6 +123,9 @@
                             <div class="header__top__right__auth">
                                 <a href="/login"><i class="fa fa-user"></i> Login</a>
                             </div>
+                            <div class="header__top__right__auth">
+                                <a href="/signup"><i class="fa fa-user"></i> Sigh Up</a>
+                            </div>
                         </div>
                     </div>
                 </div>
